--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
+    "@rollup/plugin-json": "^4.0.1",
     "@rollup/plugin-node-resolve": "^6.0.0",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
@@ -18,6 +19,9 @@
   "dependencies": {
     "d3": "^5.15.0",
     "d3-flame-graph": "^2.1.9",
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^0.4.4",
+    "vega": "^5.9.1",
+    "vega-embed": "^6.2.1",
+    "vega-lite": "^4.0.2"
   }
 }
