Add npm script to pull data source

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public",
+    "pull-data": "curl -L https://storage.googleapis.com/mlange-files/all-data.json > ./public/all-data.json"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
